[package]
name = "yali"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Yet Another LargeInt Library"
homepage = "https://github.com/vanten-s/yali"
repository = "https://github.com/vanten-s/yali"
readme = "README.md"
keywords = ["number", "large", "modexp"]
categories = ["cryptography", "mathematics", "data-structures", "algorithms"]
include = ["src/*", "benches/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

